# api-to-do-list-no-kubernetes

./: README.md
.github/workflows/: ci.yml
api/: .dockerignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
api/app/: app.py
api/app/core/: database.py  settings.py
api/app/models/: todos.py
api/app/routers/: todos.py
api/app/schemas/: todos.py
api/monitoring/: prometheus.yml
api/tests/: conftest.py  todos_test.py
kubernetes/api/: deployment.yml  ingress.yml  metallb.yml  service.yml
kubernetes/postgres/: pv.yml  pvc.yml  secrets.yml  service.yml  statefulset.yml
