[project]
name = "todos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.45",
    "testcontainers>=4.14.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "pytest>=9.0.2",
]
